# ZetaZero

./: .dockerignore  .gitignore  COMMERCIAL_LICENSE.md  CONTACT_PREP.md  CONTACT_PREP_DREAM.md  CONTRIBUTING.md  DOCKER_README.md  Dockerfile  Dockerfile.jetson  For_12GB_GPUS_2x7B.sh  For_16GB_GPUS_14B_7B.sh  For_8GB_GPUS.sh  LICENSE  README.md  README_ZETA.md  THIRD_PARTY_NOTICES.md  ZETAZERO_LINUX_CUDA_INSTALL.md  add_remember_pattern.py  analyze_conflict.py  capture_logs.sh  causal_test.sh  causal_test2.sh  causal_test3.sh  check_status.sh  cleanup_old_stubs.py  deploy_hippocampus.sh  deploy_to_z6.sh  docker-compose.yml  docker-entrypoint.sh  download_models.sh  fetch_remote_models.sh  find_models.sh  fix_credential_domain.py  fix_credential_leak.py  fix_extern_c.py  fix_format_security.py  fix_include_order.py  fix_remember_no_surface.py  improve_3b_extraction.py  integrate_numeric_conflict.py  (+48 more)
Docs/: ENTANGLEMENT_MATH.md  GGUF_Q4_K_Layout.md  ORKHESTRA_CONNECTIONS.md  REVIEW_DELETE.md  ZETA_V5_PAPER.md
ZetaLm/: Package.swift  README.md
ai_safety/: conflict_guardrail.py
archive_20251219/: zeta-3b-extract.h  zeta-causal-embeddings.h  zeta-code-mode.h  zeta-conflict.h  zeta-demo.cpp  zeta-domains.h  zeta-dual-process.h  zeta-embed-integration.h  zeta-git-traversal.h  zeta-graph-kv-integration.h  zeta-graph-manager.h  zeta-graph-smart.h  zeta-mcp.h  zeta-semantic-attacks.h  zeta-server.cpp  zeta-streaming.h  zeta-text-inject.h
benchmarks/: niah_graph_results.json  niah_zeta_graph.py  niah_zeta_provider.py  niah_zeta_results.json  niah_zeta_v2_results.json  swe_bench_zeta.py  test_arc.json  test_arc_v2.json  test_django2.jsonl  test_django2_detailed.json  test_django3.jsonl  test_django3_detailed.json  test_django4.jsonl  test_django4_detailed.json  test_django5.jsonl  test_django5_detailed.json  test_django6.jsonl  test_django6_detailed.json  test_django7.jsonl  test_django7_detailed.json  test_django_detailed.json  test_fixed.jsonl  test_fixed_detailed.json  test_patch_fix.jsonl  test_patch_fix_detailed.json  test_prediction.jsonl  test_prediction_detailed.json  test_sample3.jsonl  test_sample3_detailed.json  test_sample5.jsonl  test_sample5_detailed.json  test_v2.jsonl  test_v2_detailed.json  test_v3.jsonl  test_v3_detailed.json  test_v4.jsonl  zeta_lm_eval.py  zeta_mt_bench.py  zeta_mt_bench_answers.json  zeta_mt_bench_judgment.json  (+8 more)
docs/: EPISTEMIC_ROBUSTNESS_EVAL.md  GEMINI_CONDUCTOR_RESEARCH.md  IMPLEMENTATION_GUIDE.md  LONG_TERM_MEMORY_PLAN.md  MODEL_FAMILY_ANALYSIS.md  TERNARY_LOGIC_CONCEPT.md  UBUNTU_BUILD_LLAMA_CPP.md  ZETA_ARCHITECTURE.md  ZETA_MEMORY_MATH.md  index.html
dreams/: README.md  dream_20251223_055139_code_idea.txt  dream_20251223_055157_code_idea.txt  dream_20251223_055252_story.txt  dream_20251223_055358_code_fix.txt  dream_20251223_055452_insight.txt  dream_20251223_055559_insight.txt  dream_20251223_055635_insight.txt  dream_20251223_055653_code_idea.txt  dream_20251223_055741_code_idea.txt  dream_20251223_055817_code_idea.txt  dream_20251223_055835_code_fix.txt  dream_20251223_055942_code_idea.txt  dream_20251223_060036_story.txt  dream_20251223_060237_story.txt  dream_20251223_060419_code_fix.txt  dream_20251223_060438_code_fix.txt  dream_20251223_060456_code_idea.txt  dream_20251223_060620_code_idea.txt  dream_20251223_060638_insight.txt  dream_20251223_060656_insight.txt  dream_20251223_060803_code_fix.txt  dream_20251223_060847_insight.txt  dream_20251223_061011_code_idea.txt  dream_20251223_061046_insight.txt  dream_20251223_061211_code_idea.txt  dream_20251223_061247_story.txt  dream_20251223_061335_code_idea.txt  dream_20251223_061448_code_fix.txt  dream_20251223_063054_code_idea.txt  dream_20251223_063131_code_idea.txt  dream_20251223_063149_code_idea.txt  dream_20251223_063314_code_fix.txt  dream_20251223_063332_code_fix.txt  dream_20251223_063350_code_idea.txt  dream_20251223_063457_code_fix.txt  dream_20251223_063533_code_fix.txt  dream_20251223_063551_code_idea.txt  dream_20251223_063609_code_idea.txt  dream_20251223_063716_code_idea.txt  (+368 more)
generated_stories/: elara_stormborn_12k.json  elara_stormborn_12k.txt  elara_stormborn_12k_v2.txt
llama.cpp/: CONSTITUTION.txt  The Silicon Constitution.txt  ZETA_IMPLEMENTATION_STATUS.md  ZETA_MODIFICATION_GUIDE.md  ZETA_TEST_RESULTS.md  zeta-constitution-bridge.c  zeta-constitution-bridge.h  zeta-constitution-cuda.cu  zeta-constitution-cuda.cuh  zeta-constitution.c  zeta-constitution.h  zeta-dedup.c  zeta-dedup.h  zeta-graph-kv.c  zeta-graph-kv.h  zeta-hologit-persist.h  zeta-hologit.c  zeta-hologit.h  zeta-integration.c  zeta-integration.h  zeta-kernels.metal  zeta-kv-extract.c  zeta-kv-extract.h  zeta-memory.c  zeta-metal.h  zeta-metal.m  zeta-model-bind.c  zeta-tunnel-search.c  zeta-tunnel-search.h  zeta-version.c  zeta-version.h
llama.cpp/tools/zeta-demo/: CMakeLists.txt  zeta-3b-extract.h  zeta-causal-embeddings.h  zeta-code-conflict.h  zeta-code-mode.h  zeta-code-streaming.h  zeta-config.h  zeta-conflict.h  zeta-critic.h  zeta-cyclic.h  zeta-dream.h  zeta-dual-process.h  zeta-dual-process.h.bak  zeta-dual-process.h.fix4bak  zeta-dual-process.h.fix5test  zeta-dual-process.h.patch  zeta-embed-integration.h  zeta-extract.h  zeta-fact-store.h  zeta-git-traversal.h  zeta-graph-git.h  zeta-graph-manager.h  zeta-graph-smart.h  zeta-hrm.h  zeta-output-control.h  zeta-proactive-memory.h  zeta-pruning.h  zeta-self-modify.h  zeta-semantic-attacks.h  zeta-semantic-tools.h  zeta-server.cpp  zeta-server.cpp.bak2  zeta-server.cpp.orig  zeta-streaming.h  zeta-swarm.h  zeta-system.h  zeta-task-eval.h  zeta-ternary.h  zeta-text-memory.h  zeta-token-storage.h  (+4 more)
llama.cpp/zeta/: CMakeLists.txt
scripts/: setup.sh  (+47 more)
zeta-integration/: CMakeLists.txt  impossible_stress_test.py  zeta-demo.cpp.bak  zeta-dual-process.h  zeta-embed-integration.h  zeta-embed-memory.h  zeta-format-discovery.h  zeta-gitgraph-tokens.h  zeta-graph-git.h  zeta-integration.h  zeta-memory.h  zeta-metal.h  zeta-model-bind.h  zeta-scratch-buffer.h  zeta-scratch-integration.h  zeta-server.cpp  zeta-story-integration.h  zeta_conflict.h
(+140 files in other folders)
